content/terraform-cdk/v0.11.x/docs/cdktf/create-and-deploy/configuration-file.mdx
---
page_title: Configuration
description: >-
  Use the cdktf.json file to customize configuration settings and define the
  providers and modules to use with your application.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-29T15:45:46-05:00
last_modified: 2025-04-29T15:45:46-05:00
# END AUTO GENERATED METADATA
---

# Configuration File

The `cdktf.json` file is where you can supply custom configuration settings for your application and define the [providers](/cdktf/concepts/providers-and-resources) and [modules](/cdktf/concepts/modules) that you want to use. When you initialize a new CDK for Terraform project with a [built-in template](/cdktf/create-and-deploy/project-setup), the template generates a basic `cdktf.json` file in your root directory that you can customize for your application. Refer to the [Project Setup documentation](/cdktf/create-and-deploy/project-setup) for more information about initializing a new project.

## Specification

```ts
export enum Language {
  TYPESCRIPT = "typescript",
  PYTHON = "python",
  CSHARP = "csharp",
  JAVA = "java",
  GO = "go",
}

export interface TerraformDependencyConstraint {
  readonly name: string; // name of the module / provider
  readonly source?: string; // path / url / registry identifier for the module / provider
  readonly version?: string; // version constraint (https://www.terraform.io/docs/language/providers/requirements.html#version-constraints)
}
type RequirementDefinition = string | TerraformDependencyConstraint;

export interface Config {
  readonly app?: string; // The command to run in order to synthesize the code to Terraform compatible JSON
  readonly language?: Language; // Target language for building provider or module bindings. Currently supported: `typescript`, `python`, `java`, `csharp`, and `go`
  readonly output: string; // Default: 'cdktf.out'. Where the synthesized JSON should go. Also will be the working directory for Terraform operations
  readonly codeMakerOutput: string; // Default: '.gen'. Path where generated provider bindings will be rendered to.
  readonly projectId: string; // Default: generated UUID. Unique identifier for the project used to differentiate projects
  readonly sendCrashReports: boolean; // Default: false. Whether to send crash reports to the CDKTF team
  readonly terraformProviders?: RequirementDefinition[]; // Terraform Providers to build
  readonly terraformModules?: RequirementDefinition[]; // Terraform Modules to build
}
```

## Minimal Configuration

The most basic configuration only defines `app`. This is useful when you plan to use [pre-built providers](/cdktf/concepts/providers-and-resources) and you don't need to generate any provider or module bindings.

```json
{
  "app": "npm run --silent compile && node main.js"
}
```

## Declare Providers and Modules

You must declare all of the providers and modules that require code bindings in your `cdktf.json` file. CDKTF generates these code bindings from `cdktf.json` when you run `cdktf get`. We have a selection of pre-built [providers](/cdktf/concepts/providers-and-resources) available, but you may occasionally want to re-generate the code bindings for those providers yourself. For example, you may need a different version of that provider than the pre-built package. We do not provide pre-built modules, so you must always declare them in your `cdktf.json` file.

The [schema](/language/providers/requirements#source-addresses) for both providers and modules in CDK for Terraform consists of a name, a [source](/language/providers/requirements#source-addresses), and a [version constraint](/language/providers/requirements#version-constraints).

You can declare providers and modules using either JSON or a string with the format `source@ ~> version`.

### Provider Source

- **HashiCorp providers**: You can specify official HashiCorp [maintained providers](https://registry.terraform.io/browse/providers?tier=official) by their name on the Terraform Registry. For example, you can use `aws` to declare the official [AWS provider](https://registry.terraform.io/providers/hashicorp/aws/latest): `aws@ ~> 2.0`

- **Community providers**: You must provide the fully-qualified name. The fully-qualified name is available on the provider's registry page. For example, to define the [DataDog provider](https://registry.terraform.io/providers/DataDog/datadog/latest): `DataDog/datadog@ ~> 3.4.0`

### Module Source

- For modules on the Terraform Registry, provide the the full registry namespace. For example, to define the [AWS VPC module](https://registry.terraform.io/modules/terraform-aws-modules/vpc/aws/latest): `terraform-aws-modules/vpc/aws@ ~> 3.2.0`.

- For local modules, please use the object format to ensure that CDKTF can properly name the generated classes.

  ```jsonc
  {
    // ...
    "moduleRequirements": [
      {
        "name": "myLocalModule",
        "source": "../my-modules/local-module"
      }
    ]
  }
  ```

### Version Constraint

When you declare providers and modules in the string format, add the [version constraint](/language/expressions/version-constraints#version-constraint-syntax) after the provider or module name separated by an `@`. For example, so `provider|module@ ~> version`. The version constraint is optional; when you omit the version constraint, CDK for Terraform will download and use the latest version.

When you declare providers in JSON, add the constraint in the `version` property.

```jsonc
{
  //...
  "terraformProviders": [
    {
      "name": "aws",
      "source": "hashicorp/aws",
      "version": "~> 3.22"
    }
  ]
}
```

## Enable Features

CDKTF uses feature flags to enable potentially breaking behaviors in a release. Flags are stored as runtime context values in `cdktf.json`. Feature flags are disabled by default, so existing projects that do not specify the flag will continue to work as expected with later CDKTF releases. New projects created using `cdktf init` include flags enabling all features available in the release that created the project.

Edit `cdktf.json` to disable flags for which you prefer the old behavior, or to add flags to enable new behaviors after upgrading (example below).

```json
{
  "language": "typescript",
  "app": "npm run --silent compile && node main.js",
  "context": {
    "excludeStackIdFromLogicalIds": "true"
  }
}
```

The [CHANGELOG on Github](https://github.com/hashicorp/terraform-cdk/blob/main/CHANGELOG.md) contains a description of new feature flags in each release, and the CDKTF source file [features.ts](https://github.com/hashicorp/terraform-cdk/blob/main/packages/cdktf/lib/features.ts) provides a complete list of all feature flags.

## Configure Files to Watch

When using `cdktf watch` we inspect the `cdktf.json`s `watchPattern` property to determine which files to watch. If you do not specify a `watchPattern` property, we will add the default watch pattern for your language on the first run. The `watchPattern` expects an array of glob patterns, e.g. `["main.ts", "../constructs/**/*.ts", "lib/*.ts"]`.

## Configuration Examples

### Change the Output Directory

Defining `output` changes the directory where `cdktf` will put your generated Terraform configuration file. All Terraform operations will be performed from this directory.

The example below synthesizes the JSON Terraform configuration into `my-workdir`:

```json
{
  "app": "npm run --silent compile && node main.js",
  "output": "my-workdir"
}
```

### Build Providers

With the `terraformProviders` configuration below, a `cdktf get` will build the latest AWS provider within the 2.X version range. The generated code will be saved into `.gen` by default. This can be adjusted with `codeMakerOutput`, see other examples below.

```json
{
  "language": "typescript",
  "app": "npm run --silent compile && node main.js",
  "terraformProviders": ["aws@~> 2.0"]
}
```

### Build Modules

With this `terraformModules` configuration, a `cdktf get` will build the latest `terraform-aws-modules/vpc/aws` module from the Terraform Registry. The generated code will be saved into `.gen` by default. This can be adjusted with `codeMakerOutput` - see other examples below.

```json
{
  "language": "typescript",
  "app": "npm run --silent compile && node main.js",
  "terraformModules": ["terraform-aws-modules/vpc/aws"]
}
```

### Build Providers & Modules

This combines the two examples above. A `cdktf get` will build both the AWS provider and the latest `terraform-aws-modules/vpc/aws` module from the Terraform Registry.

```json
{
  "language": "typescript",
  "app": "npm run --silent compile && node main.js",
  "terraformModules": ["terraform-aws-modules/vpc/aws"],
  "terraformProviders": ["aws@~> 2.0"]
}
```

### Build Multiple Providers

It's possible to build multiple providers or modules as well.

```json
{
  "language": "typescript",
  "app": "npm run --silent compile && node main.js",
  "terraformProviders": [
    "null",
    "aws",
    "google",
    "azurerm",
    "kubernetes",
    "consul",
    "vault",
    "nomad"
  ]
}
```

### Build Providers in Custom Directory

This generates the `aws` provider bindings in the folder `./imports`. This is used in the Python template to make it easier to reference the generated classes.

```json
{
  "language": "python",
  "app": "pipenv run ./main.py",
  "terraformProviders": ["aws@~> 2.0"],
  "codeMakerOutput": "imports"
}
```

### Enable Crash Reporting for the CLI

You can enable or disable crash reporting by setting the `sendCrashReports` property to `true` or `false`. Sending crash reports helps our team improve the CLI faster, you can learn more about what we track on our [telemetry page](/cdktf/telemetry#crash-reporting).

```json
{
  "language": "typescript",
  "app": "npm run --silent compile && node main.js",
  "sendCrashReports": true
}
```
